# waq

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Makefile  README.md  noxfile.py  pyproject.toml  ruff.toml
.builds/: alpine.yml  ubuntu-2404.yml
.github/workflows/: ci.yml
notes/: TODO.md  TR-00.md  TR-01.md
runtime/: Makefile  wasm_runtime.c  wasm_runtime.h
src/waq/: __init__.py  cli.py  errors.py
src/waq/compiler/: __init__.py  codegen.py  stack.py  (+1 more)
tests/: conftest.py
tests/a_unit/: test_binary_reader.py  test_br_table.py  test_bulk_memory.py  test_compiler_negative.py  test_control_flow.py  test_conversion_instructions.py  test_exceptions.py  test_gc_extended.py  test_gc_instructions.py  test_memory64.py  test_memory_instructions.py  test_module_parser.py  test_multi_memory.py  test_multivalue.py  test_multivalue_calls.py  test_numeric_instructions.py  test_parser_negative.py  test_reference_instructions.py  test_saturating_conversions.py  test_sign_extension.py  test_stack.py  test_table_instructions.py  test_table_ops.py  test_tail_calls.py  test_types.py  test_variable_instructions.py  test_wasm2_extended.py
tests/b_integration/: test_compiler.py
tests/c_e2e/: test_cli.py  test_execution.py
tests/d_polyglot/: __init__.py  conftest.py  run_wasm.mjs  test_polyglot.py
tests/fixtures/: add.wat  factorial.wat  fibonacci.wat  global.wat  import.wat  locals.wat  loop.wat  memory.wat  multi_value.wat  multi_value_block.wat  return_42.wat  start.wat
tests/fuzz/: __init__.py  create_corpus.py  fuzz_compiler.py  fuzz_parser.py  test_fuzz_targets.py
(+44 files in other folders)
